Final for presentation x2

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Exra resources-->
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
     <title>Matt's page</title>
+    <link rel="icon" type="image/png" href="imagen.png">
 </head>
 
 <body>
