--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/portfolio.css">
-    <title>Document</title>
+    <title>Mat's Page</title>
+    <link rel="icon" type="image/png" href="imagen.png">
 </head>
 <body>
     <header>
@@ -22,12 +23,12 @@
     </header>
     <section class="d-flex justify-content-center mt-30 md-30">
         <div class="card w-50 d-flex align-self-center justify-content-center m-5">
-            <div class="card-header justify-content-center d-flex" style="background-color: #4F51E0;"><img src="data/p-icon.png" class="img-thumbnail w-25 rounded d-block d-flex align-self-center" alt=""></div>
+            <div class="card-header justify-content-center d-flex" style="background-color: #4F51E0;"><img src="data/p-icon.png" class="img-thumbnail w-25 rounded d-block d-flex align-self-center" alt="Pelikan icon"></div>
             <div class="card-body">
                 <p>
                     I worked creating and integrating an Ecommerce with an ERP. With Juliana Prieto we studied the internal 
                     enterprise process of the company and worked aligning them with the new E-commerce technology.
-                    <img src="data/portfolio/Pelikan.PNG" class="img-thumbnail w-75 rounded d-block d-flex align-self-center m-4" alt="">
+                    <img src="data/portfolio/Pelikan.PNG" class="img-thumbnail w-75 rounded d-block d-flex align-self-center m-4" alt="Pelikan image">
                     Currently, the e-commerce is been finished by other company that are integrating marketing tools into them.
                     Soon this page will be avalible in 
                     <a href="https://pelikancolombia.com">https://pelikancolombia.com</a>
@@ -38,12 +39,12 @@
 
     <section class="d-flex justify-content-center mt-30 md-30">
         <div class="card w-50 d-flex align-self-center justify-content-center m-5">
-            <div class="card-header justify-content-center d-flex" style="background-color: #4F51E0;"><img src="data/lili-icon.png" alt=""></div>
+            <div class="card-header justify-content-center d-flex" style="background-color: #4F51E0;"><img src="data/lili-icon.png" alt="Lilipink icon"></div>
             <div class="card-body ">
                 <p>                
                     I'm working getting mantainance to the ecommerce of Lilipink and adding new features. 
                     I continously work with Trello for making and realize tasks assigned by the Technology and Marketing Chief. <br>
-                    <img src="data/portfolio/lili.PNG" class="img-thumbnail w-75 rounded d-block d-flex align-self-center m-4" alt="">
+                    <img src="data/portfolio/lili.PNG" class="img-thumbnail w-75 rounded d-block d-flex align-self-center m-4" alt="Lilipink image">
                     <a href="https://lilipink.com">https://lilipink.com</a>
                 </p>
             </div>
@@ -52,11 +53,11 @@
 
     <section class="d-flex justify-content-center mt-30 md-30">
         <div class="card w-50 d-flex align-self-center justify-content-center m-5">
-            <div class="card-header justify-content-center d-flex" style="background-color: #4F51E0;"><img src="data/Poetri.png" alt=""></div>
+            <div class="card-header justify-content-center d-flex" style="background-color: #4F51E0;"><img src="data/Poetri.png" alt="Poetri icon"></div>
             <div class="card-body">
                 <p>
                     I'm working in designing and implementing an serlverless service. In there you can use a Web IDE, a CLI or a VS Code plugin to upload your functions to AWS Lambda in just several clicks.
-                    <img src="data/portfolio/poetr.PNG" class="img-thumbnail w-75 rounded d-block d-flex align-self-center m-4" alt=""> <br>
+                    <img src="data/portfolio/poetr.PNG" class="img-thumbnail w-75 rounded d-block d-flex align-self-center m-4" alt="Poetri image"> <br>
                     <a href="https://poetri.io">https://poetri.io</a>
                 </p>
             </div>
