--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mat's Page</title>
+    <link rel="icon" type="image/png" href="imagen.png">
     <!-- custom CSS-->
     <link rel="stylesheet" type="text/css" href="styles/about.css">
     <!-- Exra resources-->
@@ -127,17 +128,17 @@
         <div class="card">
             <div class="w-cont">
                 <div class="w-card">
-                    <img src="data/p-icon.png" alt="">
+                    <img src="data/p-icon.png" alt="Pelikan icon">
                     <h4>(2019-2020)</h4> <br>
                     <h5>Worked creating and integrating an Ecommerce with an ERP</h3>
                 </div>
                 <div class="w-card">
-                    <img src="data/lili-icon.png" alt=""> 
+                    <img src="data/lili-icon.png" alt="Lilipink Icon"> 
                     <h4>(2019-nowdays)</h4> <br>
                     <h5>Working getting mantainance to the ecommerce and adding new features</h3>
                 </div>
                 <div class="w-card">
-                    <img src="data/Poetri.png" alt=""> 
+                    <img src="data/Poetri.png" alt="Poetri icon"> 
                     <h4>(2019-nowdays)</h4> <br>
                     <h5>Working in designing and implementing an serlverless service</h3>
                 </div>
