--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h3>Systems Engineering and Management Student</h3>
             <div class="buttons">
                 <a href="about.html" class="butt">About</a>
-                <a href="portafolio" class="butt">Portafolio</a>
+                <a href="portfolio.html" class="butt">Portafolio</a>
             </div>
             <div class="buttons social">
                 <a href="https://twitter.com/jm_contreras10"><img src="data/tweeter.png" class="social-icon" alt="Twitter"/></a>
